Cập nhật Clear History

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 GROQ_API_KEY = "YOUR_API_KEY"
 YOUTUBE_API_KEY = "YOUR_API_KEY"
+ACRCLOUD_ACCESS_KEY = "YOUR_ACRCLOUD_ACCESS_KEY"
+ACRCLOUD_ACCESS_SECRET = "YOUR_ACRCLOUD_ACCESS_SECRET"
+ACRCLOUD_REQ_URL = "YOUR_ACRCLOUD_REQ_URL"
